# tikr

./: .env.example  .gitignore  AUDIT.md  BACKTEST.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.as.usdc.toml  config.doge-mainnet.toml  config.flat.btcusdc.toml  config.flat.dogeusdc.toml  config.flat.ethusdc.toml  config.flat.usdc.toml  config.flat.zecusdc.toml  config.hydra.majors.toml  config.joker.btcusdc.toml  config.ladder-reentry.toml  config.micro-mean-reversion.toml  config.playusdt.mainnet.toml  config.simple.gap.toml  config.spread-scalp.btcusdc.mainnet.toml  config.spread-scalp.majors.toml  config.spread-scalp.rotator.mainnet.toml  config.spread-scalp.toml  config.spread-scalp.usdc.mainnet.toml  config.static-grid.majors.toml  config.strangler.toml  config.temp.toml  config.tick-floor.mainnet.toml  config.tide.auto.toml  config.tide.btcusdc.toml  config.tide.zecusdc.toml  config.toml  config.touch-refill.auto.mainnet.toml  config.touch-refill.btcusdc.mainnet.toml  config.touch-refill.esports.mainnet.toml  config.touch-refill.usdc.mainnet.toml  config.volley.btcusdc.toml  config.volley.zecusdc.toml  (+9 more)
.github/workflows/: ci.yml  cron.yml
apps/tikr/: Cargo.toml
apps/tikr-dashboard/: Cargo.toml
apps/tikr-dashboard/examples/: config.toml
apps/tikr-dashboard/src/: build.rs  config.rs  logs.rs  main.rs  selection.rs  state.rs  supervisor.rs  tui.rs  venue.rs
apps/tikr/src/: bagboy.rs  bnb_refill.rs  build.rs  config.rs  logs.rs  main.rs  rampage.rs  scalp_rotation.rs  selection.rs  state.rs  supervisor.rs  theme.rs  tide_auto.rs  touch_refill_auto.rs  tui.rs  venue.rs  wave_auto.rs
apps/tikr/themes/: default.toml
config/: bagboy.navusdt.toml  doge-mainnet.toml  hydra.majors.toml  joker.mainnet.toml  ladder-reentry.toml  mantis.usdc.majors.toml  micro-mean-reversion.toml  mmr.usdc.toml  playusdt.mainnet.toml  prompt.tmp.toml  rsi-mr.ethusdc.mainnet.toml  simple.gap.toml  spread-scalp.btcusdc.mainnet.toml  spread-scalp.majors.toml  spread-scalp.rotator.mainnet.toml  spread-scalp.toml  spread-scalp.usdc.mainnet.toml  static-grid.joker-markets.mainnet.toml  static-grid.mainnet.toml  static-grid.majors.toml  static-grid.toml  temp.toml  tick-floor.esport.mainnet.toml  tick-floor.mainnet.toml  tide.auto.mainnet.toml  tide.auto.toml  tide.btcusdc.mainnet.toml  tide.esports.mainnet.toml  tide.ethusdc-ticks.mainnet.toml  tide.opgusdt.toml  tide.top5-usdt.mainnet.toml  tide.usdc.majors.toml  tide.usdc.toml  tide.zecusdc.toml  volley.btcusdc.toml  volley.zecusdc.toml  wave.usdc.majors.toml
crates/tikr-backtest/: Cargo.toml  README.md  SCHEMA.md
crates/tikr-backtest/examples/: gen_synth.rs  price_path.rs
crates/tikr-backtest/src/: fill_sim.rs  grid_detect.rs  lib.rs  liq_replay.rs  liquidation.rs  mark.rs  parquet_util.rs  pnl.rs  replay.rs  runner.rs
crates/tikr-backtest/tests/: comparison.rs  golden.rs
crates/tikr-binance/: Cargo.toml
crates/tikr-binance/examples/: run_perp.rs  run_spot.rs
crates/tikr-binance/src/: depth_stream.rs  errors.rs  exchange_info.rs  futs.rs  http.rs  lib.rs  liquidation_stream.rs  mark_price_stream.rs  sign.rs  spot.rs  trade_stream.rs  user_stream.rs  ws_order.rs
crates/tikr-binance/tests/: sign_roundtrip.rs
crates/tikr-bybit/: Cargo.toml
crates/tikr-bybit/src/: depth_stream.rs  lib.rs  mapping.rs  rest.rs  sign.rs  trade_stream.rs
crates/tikr-core/: Cargo.toml
crates/tikr-core/src/: lib.rs
crates/tikr-dodo/: Cargo.toml
crates/tikr-dodo/examples/: run_live.rs
crates/tikr-dodo/src/: chainlink.rs  events.rs  exchange.rs  lib.rs
crates/tikr-dodo/tests/: sign_roundtrip.rs
crates/tikr-hyperliquid/: Cargo.toml  README.md
crates/tikr-hyperliquid/examples/: run_live.rs
crates/tikr-hyperliquid/src/: client.rs  exchange.rs  lib.rs  mapping.rs  messages.rs  ws.rs
crates/tikr-hyperliquid/tests/: integration.rs  parsing.rs  sign_roundtrip.rs  smoke.rs
crates/tikr-hyperliquid/tests/fixtures/: clearinghouse_state.json  l2book_push.json  l2book_snapshot.json  open_orders.json  trades_push.json  user_fills.json
crates/tikr-mexc/: Cargo.toml
crates/tikr-mexc/src/: lib.rs  sign.rs  spot.rs
crates/tikr-paper/: Cargo.toml  README.md
crates/tikr-paper/examples/: run_paper.rs
crates/tikr-paper/src/: alerts.rs  bagger.rs  lib.rs  live.rs  metrics.rs  multi.rs  probe.rs  report.rs  runner.rs  spawn.rs  state.rs
crates/tikr-paper/tests/: risk_capstone.rs  smoke.rs
crates/tikr-record/: Cargo.toml
crates/tikr-risk/: Cargo.toml
crates/tikr-risk/src/: gate.rs  lib.rs
crates/tikr-strategy/: Cargo.toml
crates/tikr-strategy/src/: avellaneda_stoikov.rs  flat_mm.rs  glft.rs  hawk.rs  hydra.rs  joker.rs  keel.rs  kline_scalp.rs  ladder_reentry.rs  layered_grid.rs  lib.rs  liq_fade.rs  mantis.rs  micro_mean_reversion.rs  micro_price.rs  ratchet.rs  rebalance.rs  rsi_mr.rs  simple_gap.rs  spread_scalp.rs  spread_scalp_old.rs  static_grid.rs  strangler.rs  tidal.rs  tide.rs  top_of_book.rs  touch_refill.rs  volatility.rs  volley.rs  wave.rs
crates/tikr-strategy/src/spread_scalp/: adverse_tracker.rs  book_state.rs  mod.rs  policy.rs  resting_orders.rs  risk.rs
crates/tikr-venue/: Cargo.toml
crates/tikr-venue/src/: lib.rs
results/: run_tide_bt.sh  tide_NEARUSDT.txt  tide_SUIUSDT.txt  tide_WLDUSDT.txt  tide_ZECUSDT.txt
scripts/: rsi_mr_sweep.sh  rsi_mr_sweep_5m.sh  tide_sweep.sh  wave_sweep_2h.sh
sweeps/: majors_basket.toml
