[workspace]
resolver = "2"
members = ["crates/*", "apps/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/tikr"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://tikr.kryptic.sh"
readme = "README.md"

[patch.crates-io]
tikr-core = { path = "crates/tikr-core" }
tikr-venue = { path = "crates/tikr-venue" }
tikr-strategy = { path = "crates/tikr-strategy" }
tikr-hyperliquid = { path = "crates/tikr-hyperliquid" }
tikr-binance = { path = "crates/tikr-binance" }
tikr-mexc = { path = "crates/tikr-mexc" }
tikr-backtest = { path = "crates/tikr-backtest" }
tikr-paper = { path = "crates/tikr-paper" }
tikr-risk = { path = "crates/tikr-risk" }

[profile.release]
lto = "thin"
codegen-units = 1

# Dev test profile — opt-level=1 keeps Decimal-heavy backtest tests fast
# enough while skipping the full release LLVM pass. Cuts incremental
# `cargo test` compile after a touch in tikr-strategy from ~3m → ~1m
# vs `--release`. Use `cargo test --release` only for perf-sensitive
# golden runs.
[profile.test]
opt-level = 1

# Profile-friendly release build. Inherits release optimizations + adds debug
# line tables so samply / flamegraph can map sampled PCs back to source.
[profile.profiling]
inherits = "release"
debug = 1
split-debuginfo = "off"
