[package]
name = "tikr-dashboard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Multi-bot live trading dashboard for tikr"

[[bin]]
name = "tikr-dashboard"
path = "src/main.rs"

[dependencies]
tikr-core = "0.1"
tikr-strategy = "0.1"
tikr-venue = "0.1"
tikr-paper = "0.1"
tikr-binance = "0.1"
tikr-backtest = "0.1"

# CLI + config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Utility
anyhow = "1"
dotenvy = "0.15"
rust_decimal = "1"
rust_decimal_macros = "1"

# Net
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring"], default-features = false }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# hjkl vim-like primitives
hjkl-picker = "0.27"
hjkl-keymap = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
