[package]
name = "tikr-backtest"
description = "Backtest engine for the tikr market-making engine: parquet replay + fill simulation + P&L accounting"
keywords = ["trading", "backtest", "market-making", "quant"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "record"
path = "src/bin/record.rs"

[[bin]]
name = "record_binance"
path = "src/bin/record_binance.rs"

[[bin]]
name = "download_klines"
path = "src/bin/download_klines.rs"

[[bin]]
name = "backtest_klines"
path = "src/bin/backtest_klines.rs"

[[bin]]
name = "backtest_bands"
path = "src/bin/backtest_bands.rs"

[[bin]]
name = "backtest_dca_bands"
path = "src/bin/backtest_dca_bands.rs"

[[bin]]
name = "backtest_layered_grid"
path = "src/bin/backtest_layered_grid.rs"

[dependencies]
tikr-core = "0.1"
tikr-venue = "0.1"
# Direct dep so we can use the `ToPrimitive` trait for the BookState tick
# conversion (tikr-core re-exports the type but not the prelude traits).
rust_decimal = { version = "1", default-features = false }
tikr-strategy = "0.1"
tikr-hyperliquid = "0.1"
tikr-binance = "0.1"
polars = { version = "0.43", default-features = false, features = ["parquet", "lazy", "polars-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
# Direct dep so the recorder bins can install a CryptoProvider before any TLS
# use — reqwest's rustls-tls + tokio-tungstenite's rustls-tls-webpki-roots
# pull conflicting provider defaults, leaving rustls 0.23 ambiguous at runtime.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Direct dep so download_klines can pull historical kline data from the
# Binance REST API.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
