[package]
name = "tikr-backtest"
description = "Backtest engine for the tikr market-making engine: parquet replay + fill simulation + P&L accounting"
keywords = ["trading", "backtest", "market-making", "quant"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

# This crate is now library-only: the parquet replay engine + FillSim +
# P&L accounting consumed by tikr-paper's `compare` runner and apps/tikr.
# The recorder moved to the `tikr-record` crate; the one-off strategy
# experiment bins were removed (the strategy registry is the source of
# truth now).

[dependencies]
tikr-core = "0.1"
tikr-venue = "0.1"
# Direct dep so we can use the `ToPrimitive` trait for the BookState tick
# conversion (tikr-core re-exports the type but not the prelude traits).
rust_decimal = { version = "1", default-features = false }
tikr-strategy = "0.1"
polars = { version = "0.43", default-features = false, features = ["parquet", "lazy", "polars-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
