[package]
name = "tikr-hyperliquid"
description = "Hyperliquid Venue adapter for the tikr market-making engine"
keywords = ["trading", "hyperliquid", "market-making", "crypto"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tikr-core = "0.1"
tikr-venue = "0.1"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = "1"
# EIP-712 signing for Hyperliquid /exchange actions (Phase 5).
# alloy-signer-local: PrivateKeySigner (secp256k1 ECDSA).
# alloy-primitives: B256, Address, keccak256 (with serde feature for hex round-trips).
# rmp-serde: msgpack serialization required by Hyperliquid action_hash construction.
# EIP-712 struct encoding is done manually (see exchange::sign_agent_eip712).
alloy-signer = "2"
alloy-signer-local = "2"
alloy-primitives = { version = "1", features = ["serde"] }
rmp-serde = "1"
hex = "0.4"

[dev-dependencies]
tikr-paper = "0.1"
tikr-strategy = "0.1"
tikr-risk = "0.1"
tikr-backtest = "0.1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util", "signal"] }

[[example]]
name = "run_live"
path = "examples/run_live.rs"
