[package]
name = "tikr-mexc"
description = "MEXC Spot Venue adapter for the tikr engine"
keywords = ["trading", "mexc", "market-making", "crypto"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tikr-core = "0.1"
tikr-venue = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
tracing = "0.1"
uuid = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
