[package]
name = "tikr-paper"
description = "Paper-trading runner for the tikr market-making engine — drives live Venue stream through Strategy + FillSim + PositionTracker"
keywords = ["trading", "paper-trading", "market-making", "quant"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tikr-core = "0.1"
tikr-venue = "0.1"
tikr-strategy = "0.1"
tikr-hyperliquid = "0.1"
tikr-backtest = "0.1"
tikr-risk = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "test-util"] }

[[bin]]
name = "supervisor"
path = "src/bin/supervisor.rs"
