[package]
name = "tikr-strategy"
description = "Strategy trait for the tikr market-making engine"
keywords = ["trading", "market-making", "strategy", "quant"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tikr-core = "0.1"
tikr-venue = "0.1"
# Direct dep so hydra can `use rust_decimal::prelude::ToPrimitive` for
# the band-index Decimal → u32 cast. tikr-core re-exports `Decimal` but
# not the prelude traits.
rust_decimal = { version = "1", default-features = false }
