[package]
name = "tikr-venue"
description = "Venue trait surface for the tikr market-making engine"
keywords = ["trading", "market-making", "exchange", "crypto"]
categories = ["finance"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tikr-core = "0.1"
